--- a/home.html
+++ b/home.html
@@ -56,23 +56,34 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto" href="/about-us">About Us</a></li>
-            <li class="dropdown">
+            <li class="dropdown triangle">
               <a href="#"
                 ><span>Community</span> <i class="bi bi-chevron-down"></i
               ></a>
               <ul>
-                <div class="row">
-                  <div class="col-md-6">
-                    <li><a href="#">Drop Down 1</a></li>
-                    <li><a href="#">Drop Down 2</a></li>
-                    <li><a href="#">Drop Down 3</a></li>
-                    <li><a href="#">Drop Down 4</a></li>
+                <div class="container">
+                  <div class="topic">
+                    <p>Topics</p>
                   </div>
-                  <div class="col-md-6">
-                    <li><a href="#">Drop Down 1</a></li>
-                    <li><a href="#">Drop Down 2</a></li>
-                    <li><a href="#">Drop Down 3</a></li>
-                    <li><a href="#">Drop Down 4</a></li>
+                  <div class="row">
+                    <div class="col-md-4">
+                      <li><a href="#">IP & Brand Protection</a></li>
+                      <li><a href="#">Transportation</a></li>
+                      <li><a href="#">Trust & Safety</a></li>
+                      <li><a href="#">Cyber Crime</a></li>
+                    </div>
+                    <div class="col-md-4">
+                      <li><a href="#">Child Exploitation</a></li>
+                      <li><a href="#">Insurance Fraud</a></li>
+                      <li><a href="#">Finance fraud</a></li>
+                      <li><a href="#">Compliance</a></li>
+                    </div>
+                    <div class="col-md-4">
+                      <li><a href="#">Human Trafficing</a></li>
+                      <li><a href="#">Violent Extremism</a></li>
+                      <li><a href="#">Online Investigation</a></li>
+                      <li><a href="#">Organized Crime</a></li>
+                    </div>
                   </div>
                 </div>
               </ul>
@@ -80,7 +91,6 @@
             <li><a class="nav-link scrollto" href="/careers">Careers</a></li>
             <li class="d-sm-block d-md-none">
               <a class="getstarted scrollto" href="#about">Request demo</a>
-              <a class="nav-link scrollto" href="#">Login</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -90,7 +100,46 @@
             <li>
               <a class="getstarted scrollto" href="#about">Request demo</a>
             </li>
-            <li><a class="nav-link scrollto" href="/about-us">Login</a></li>
+            <li class="dropdown form-nav-ul">
+              <a href="#"><span>Login</span> </a>
+              <ul>
+                <div class="container form-nav">
+                  <div class="topic">
+                    <p>Login</p>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1" class="form-label"
+                            >Work Email</label
+                          >
+                          <input
+                            type="email"
+                            class="form-control"
+                            id="exampleInputEmail1"
+                            aria-describedby="emailHelp"
+                          />
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1" class="form-label"
+                            >Password</label
+                          >
+                          <input
+                            type="password"
+                            class="form-control"
+                            id="exampleInputPassword1"
+                          />
+                        </div>
+                        <button type="submit" class="btn btn-primary">
+                          Submit
+                        </button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </ul>
+            </li>
           </ul>
         </nav>
         <!-- .navbar -->
